# b3-open-data

./: LICENSE  README.md  main.py  pyproject.toml  requests_b3.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
src/b32u/: downloader.py  utils.py
src/b3od/: __init__.py  exceptions.py  meta.py  scrapper.py  utils.py
