[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "b3-open-data"
version         = "1.0.4"
description     = "Data extractor for the Brazilian Stock Exchange (B3)"
readme          = "README.md"
authors         = [{ name = "Rafael Elter", email = "rafaelelter@gmail.com" }]
license         = { file = "LICENSE" }
classifiers     = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords        = ["b3", "scrapper"]
dependencies    = [
    "pandas >= 1.4",
    "requests",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "bumpver", "pytest"]

[project.urls]
homepage = "https://github.com/rafaelelter/b3-open-data"

[tool.bumpver]
current_version = "1.0.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version         = "{version}"']
"src/b3od/__init__.py" = ["{version}"]
