[metadata]
name = b32u
version = 0.0.1
author = Rafael Elter
author_email = rafaelelter@gmail.com
description = Data extractor from Brazilian Stock Exchange (B3)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafaelelter/b32u
project_urls =
    Bug Tracker = https://github.com/rafaelelter/b32u/issues
classifiers =   
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src