[metadata]
name = b3-open-data
version = 0.0.1
author = Rafael Elter
author_email = rafaelelter@gmail.com
description = Data extractor for the Brazilian Stock Exchange (B3)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafaelelter/b3-open-data
project_urls =
    Bug Tracker = https://github.com/rafaelelter/b3-open-data/issues
classifiers =   
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = 
    requests
    pandas
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src